# tutorials

./: .gitignore  Basics-K8s.md  LICENSE  README  README.md
.github/: FUNDING.yml
038/terraform/: eips.tf  provider.tf
039/: README.md
040/: provider.tf
041/: cluster.yaml
041/efs/: 1-namespace.yaml  3-clusterrole.yaml  5-role.yaml  6-rolebinding.yaml  7-deployment.yaml
041/test/: 2-persistent-volume-claim.yaml  4-bar-deployment.yaml
042/v2/: kustomization.yaml
043/: Makefile  eks.yaml
043/app/: go.mod  main.go
043/k8s/: 01-secret.yaml
044/: Makefile  README.md  cert.pem
044/app/: .dockerignore
044/k8s/: 01-kubeseal.yaml  03-secret.yaml  05-deployment.yaml
045/: eks.yaml
045/k8s/: 03-production-deployment.yaml  04-staging-deployment.yaml
046/: README.md
046/app/: package-lock.json  package.json  server.js
046/k8s/: 1-express.yaml  2-deployment.yaml  3-service.yaml  4-cert-manager.yaml  4-nginx-ingress.yaml  5-http-ingress.yaml  6-cert-manager.yaml  7-issuer.yaml  8-https-ingress.yaml
047/: README.md
047/app/: Dockerfile  app.js  app.test.js  event.json  package-lock.json  package.json
047/hello-app/: Dockerfile  package-lock.json  package.json
048/hello-app/: app.test.js  event.json  package.json
AlgoTrading/: Algo.py
docs/: contents.md
dog/: bark.txt
eksctl-tutorial/: config.yaml
lessons/: rename_folders.ps1  rename_folders_yt_dlp.ps1  update_folder_names.ps1  update_folders_with_youtube.ps1
lessons/006/: README.md  main.tf
lessons/014/: nginx.yaml
lessons/014-terraform-ansible-integration-terraform-ansible-aws-example/: README.md  main.tf
lessons/020/: README.md  main.tf
lessons/021/: README.md
lessons/022/: README.md  eksctl-cluster.yaml
lessons/040/: main.tf  variables.tf
lessons/041/: README.md  cluster.yaml
lessons/042/: README.md  secret-v1.yaml  secret-v2.yaml  token.txt
lessons/043/: README.md
lessons/044/: eks.yaml
lessons/045/: README.md
lessons/046/: README.md
lessons/047/: README.md
lessons/048/: README.md
lessons/049/: README.md
lessons/050/: README.md
lessons/051/: README.md
lessons/052/: README.md
lessons/128/functions/rust/: Cargo.toml
lessons/128/functions/rust/src/: main.rs
lessons/146/web/: Cargo.toml
lessons/146/web/src/: main.rs
lessons/147-go-golang-vs-rust-performance-benchmark/rust-app/: Cargo.toml  Dockerfile
lessons/147-go-golang-vs-rust-performance-benchmark/rust-app/deploy/: secret-tls.yaml  service-tls.yaml
lessons/147-go-golang-vs-rust-performance-benchmark/rust-app/proto/: device.proto
lessons/147-go-golang-vs-rust-performance-benchmark/rust-app/src/: server.rs
lessons/203-rust-vs-go-performance-latency-throughput-saturation-availability/rust-app/: Cargo.toml  config.toml
lessons/203-rust-vs-go-performance-latency-throughput-saturation-availability/rust-app/src/: image.rs
lessons/203/rust-app-v2/: Cargo.toml  Dockerfile  config.toml
lessons/203/rust-app-v2/src/: config.rs  device.rs  image.rs  main.rs  routes.rs
lessons/206/axum-app/: Cargo.toml
lessons/206/axum-app/src/: main.rs  routes.rs
lessons/226-pingora-vs-nginx-performance-benchmark-my-new-favorite-proxy/pingora-proxy/: Cargo.toml  Proxy.toml
lessons/226-pingora-vs-nginx-performance-benchmark-my-new-favorite-proxy/pingora-proxy/src/: config.rs
lessons/243-rust-vs-go-golang-performance-2025/rust-app/: Cargo.toml
lessons/243-rust-vs-go-golang-performance-2025/rust-app/src/: main.rs  routes.rs
lessons/244-rust-vs-go-golang-performance-fastest-frameworks-postgresql/rust-app/: Cargo.toml
lessons/244/rust-app/: Cargo.toml
lessons/244/rust-app/src/: device.rs  main.rs  routes.rs
lessons/246-tcp-vs-udp-performance-latency-throughput/myapp/: CMakeLists.txt  monitoring.cpp  monitoring.hpp  udp_server.cpp
lessons/247/may-app/: Cargo.toml
lessons/247/may-app/src/: main.rs
lessons/248/app/: CMakeLists.txt  Dockerfile  vcpkg.json  websocket_client.cpp  websocket_server.cpp
lessons/251-tcp-vs-udp-performance-round-3/app/: CMakeLists.txt  tcp_server.cpp  vcpkg.json
lessons/253-redis-streams-vs-pubsub-performance/client/: CMakeLists.txt  CMakeUserPresets.json  Dockerfile  vcpkg-configuration.json
lessons/253-redis-streams-vs-pubsub-performance/client/src/: config.cpp  event.capnp.h  market.cpp  monitoring.hpp  pubsub_client.cpp
lessons/257/axum-app/: Cargo.toml
lessons/257/axum-app/src/: main.rs  routes.rs
lessons/257/may-app/: Cargo.toml
lessons/257/may-app/src/: main.rs  models.rs  routes.rs
lessons/257/ntex-app/: Cargo.toml
lessons/257/ntex-app/src/: main.rs  routes.rs
lessons/263/app-cpp/: CMakeLists.txt
lessons/263/app-cpp/include/: book_ticker.hpp  http_session.hpp  listener.hpp
lessons/263/app-cpp/src/: book_ticker.cpp  http_session.cpp  listener.cpp  main.cpp
lessons/264/app/: .clang-format  CMakeLists.txt  vcpkg.json
lessons/264/app/include/sbe/: Bbo.h
lessons/264/app/schemas/: bbo.xml
lessons/264/app/src/: aeron-publisher.cpp  aeron-subscriber.cpp  zeromq-publisher.cpp  zeromq-subscriber.cpp
lessons/264/app/src/utils/: utils.cpp  utils.hpp
lessons/269/app/: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
lessons/269/app/include/sbe/: Bbo.h  MessageHeader.h
lessons/269/app/schemas/: bbo.xml
lessons/269/app/src/: udp_client.cpp  udp_server.cpp
lessons/269/app/src/utils/: utils.cpp
lessons/271/app/: CMakeLists.txt  Dockerfile  vcpkg-configuration.json  vcpkg.json
lessons/271/app/include/: utils.hpp
lessons/271/app/src/: http_client.cpp  http_server.cpp  websocket_client.cpp  websocket_server.cpp
lessons/274/app/: CMakeLists.txt  Dockerfile  README.md  vcpkg-configuration.json  vcpkg.json
lessons/274/app/examples/: large.json  medium.json  quote.json  quote.proto  small.json
lessons/274/app/include/: large.hpp  medium.hpp  small.hpp  tscns.h  utils.hpp
lessons/274/app/proto/: large.proto  medium.proto  small.proto
lessons/274/app/src/: json.cpp  protobuf.cpp
terraform-eks-cluster/: README.md
terraform-tutorial-for-beginners/: main.tf  output.tf  provider.tf  variables.tf
utils/: build.sh
(+4619 files in other folders)
