[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
axum-prometheus = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
