[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
aws-config = "1.5.5"
aws-sdk-s3 = "1.46.0"
chrono = "0.4.38"
deadpool-postgres = "0.14.0"
prometheus-client = "0.22.3"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1"
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4", "with-uuid-1"] }
toml = "0.8.19"
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
