[package]
name = "axum-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
mimalloc = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
