[package]
name = "pingora-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait="0.1"
pingora = { version = "0.4", features = ["lb", "openssl"] }
log = "0.4"
env_logger = "0.11.5"
toml = "0.8.19"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
