[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[profile.release]
lto = true
codegen-units = 1