[package]
name = "may-app"
version = "0.1.0"
edition = "2024"

[dependencies]
mimalloc = { version = "0.1.48", default-features = false }
may = { version = "0.3.51", default-features = false }
may_minihttp = "0.1"
num_cpus = "1.17.0"
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
yarte = { version = "0.15", features = ["bytes-buf", "json"] }
buf-min = { version = "0.7", features = ["bytes"] }

[profile.release]
opt-level = 3          # Highest optimization for speed (default in release, but explicit is fine).
lto = "fat"            # Enables full link-time optimization for better inlining and dead code elimination across crates.
codegen-units = 1      # Reduces parallelism in codegen to allow more aggressive optimizations (increases compile time).
panic = "abort"        # Aborts on panic instead of unwinding, reducing overhead and binary size.
strip = "symbols"      # Strips debug symbols and unused code for a leaner binary.
