[package]
name = "ntex-app"
version = "0.1.0"
edition = "2024"

[dependencies]
ntex = { version = "2.16.0", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
mimalloc = { version = "0.1.48", default-features = false }


[profile.release]
opt-level = 3          # Highest optimization for speed (default in release, but explicit is fine).
lto = "fat"            # Enables full link-time optimization for better inlining and dead code elimination across crates.
codegen-units = 1      # Reduces parallelism in codegen to allow more aggressive optimizations (increases compile time).
panic = "abort"        # Aborts on panic instead of unwinding, reducing overhead and binary size.
strip = "symbols"      # Strips debug symbols and unused code for a leaner binary.
