[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
aws-sdk-s3 = "0.19.0"
aws-smithy-http= "0.49.0"
aws-smithy-types-convert = { version = "0.49.0", features = ["convert-chrono"] }
chrono = "0.4.22"
lambda_http = { version = "0.6.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.6.1"
rand = "0.8.5"
thiserror = "1.0.36"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt",] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"